<resources>
    <string name="app_name">Coins-N-Dice</string>
    <string name="black_die_button">Roll the\nblack die!</string>
    <string name="red_die_button">Roll the\nred die!</string>
    <string name="coin_1_button">Toss the\ngold coin!</string>
    <string name="coin_2_button">Toss the\nsilver coin!</string>
    <string name="two_up_button">Spin the Coins!</string>
    <string name="dice_roll_button">Roll Double Dice!</string>
    <string name="One">One</string>
    <string name="Two">Two</string>
    <string name="Three">Three</string>
    <string name="Four">Four</string>
    <string name="Five">Five</string>
    <string name="Six">Six</string>
    <string name="Seven">Seven</string>
    <string name="Eight">Eight</string>
    <string name="Nine">Nine</string>
    <string name="Ten">Ten</string>
    <string name="Eleven">Eleven</string>
    <string name="Twelve">Twelve</string>
    <string name="Heads">Heads</string>
    <string name="Tails">Tails</string>
    <string name="Both">One Them</string>
</resources>
