<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_black_die"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:hapticFeedbackEnabled="true"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:text="@string/black_die_button"
        android:textSize="14sp"
        app:guidelineUseRtl="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_red_die"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_black_die"
        app:rippleColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_red_die"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:hapticFeedbackEnabled="true"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:text="@string/red_die_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_black_die"
        app:layout_constraintTop_toBottomOf="@+id/image_red_die"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button_gold_coin"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:hapticFeedbackEnabled="true"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:text="@string/coin_1_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/image_gold_coin"
        app:layout_constraintEnd_toStartOf="@+id/button_silver_coin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_silver_coin"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:hapticFeedbackEnabled="true"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:text="@string/coin_2_button"
        android:textSize="14sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/image_silver_coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_gold_coin"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button_two_up"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hapticFeedbackEnabled="true"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:text="@string/two_up_button"
        app:layout_constraintBottom_toTopOf="@+id/button_roll_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_gold_coin"
        app:rippleColor="@color/white" />

    <Button
        android:id="@+id/button_roll_dice"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hapticFeedbackEnabled="true"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:text="@string/dice_roll_button"
        app:layout_constraintBottom_toTopOf="@+id/image_red_die"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_two_up"
        app:rippleColor="@color/white" />

    <ImageView
        android:id="@+id/image_gold_coin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/button_two_up"
        app:layout_constraintEnd_toEndOf="@+id/button_gold_coin"
        app:layout_constraintStart_toStartOf="@+id/button_gold_coin"
        app:layout_constraintTop_toBottomOf="@+id/button_gold_coin"
        tools:srcCompat="@drawable/gold_coin_n" />

    <ImageView
        android:id="@+id/image_silver_coin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/button_two_up"
        app:layout_constraintEnd_toEndOf="@+id/button_silver_coin"
        app:layout_constraintStart_toStartOf="@+id/button_silver_coin"
        app:layout_constraintTop_toBottomOf="@+id/button_silver_coin"
        tools:srcCompat="@drawable/silver_coin_n" />

    <ImageView
        android:id="@+id/image_black_die"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/button_black_die"
        app:layout_constraintEnd_toEndOf="@+id/button_black_die"
        app:layout_constraintStart_toStartOf="@+id/button_black_die"
        app:layout_constraintTop_toBottomOf="@+id/button_roll_dice"
        tools:srcCompat="@drawable/die_black_0" />

    <ImageView
        android:id="@+id/image_red_die"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/button_red_die"
        app:layout_constraintEnd_toEndOf="@+id/button_red_die"
        app:layout_constraintStart_toStartOf="@+id/button_red_die"
        app:layout_constraintTop_toBottomOf="@+id/button_roll_dice"
        tools:srcCompat="@drawable/die_red_0" />

</androidx.constraintlayout.widget.ConstraintLayout>